Fixed overflow issue with Tagline.

--- a/public/stylesheets/index2.css
+++ b/public/stylesheets/index2.css
@@ -1075,7 +1075,6 @@ footer .pure-g {
 .pure-tagline {
   z-index: 500;
   margin-bottom: -20px;
-  overflow: hidden;
 }
 
 .pure-tagline h1 {
@@ -1087,7 +1086,7 @@ footer .pure-g {
   padding: 20px;
   margin: 0;
   transform: rotate(5deg);
-  transform-origin: bottom right;
+  transform-origin: top right;
 }
 
 .pure-homepage-description {
